updated board setup

--- a/Source/Battleship.ipynb
+++ b/Source/Battleship.ipynb
@@ -2,36 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n",
-      "attempt\n",
-      "4\n",
-      "attempt\n",
-      "3\n",
-      "attempt\n",
-      "3\n",
-      "attempt\n",
-      "2\n",
-      "attempt\n",
-      "attempt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# clear the board\n",
     "dim = 10\n",
@@ -44,10 +27,8 @@
     "# for each ship\n",
     "for ship_length in ship_lengths:\n",
     "    is_ship_placed = False\n",
-    "    print(ship_length)\n",
     "    \n",
     "    while not is_ship_placed:\n",
-    "        print('attempt')\n",
     "        # seed a coordinate for the head of a ship\n",
     "        head = tuple(np.random.randint(dim, size=2))\n",
     "\n",
@@ -84,62 +65,255 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 0, 0, 0, 1, 0, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 1, 0, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 1, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 1, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 1, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 1, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 1, 0, 1, 1],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 1, 1, 1, 1, 1, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]])"
-      ]
-     },
-     "execution_count": 251,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "board"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17\n",
-      "17\n"
+      "True\n",
+      "0011111000000000000000000000000000000000011111110000000001000011110000000000000000000000000000000000\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 1, 1, 1, 1, 1, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 1, 1, 1, 1, 1, 1, 1, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 1, 1, 1, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(sum(ship_lengths))\n",
-    "print(sum(sum(board)))"
+    "#check number of pieces on the board\n",
+    "print(sum(ship_lengths) == sum(sum(board)))\n",
+    "\n",
+    "# board solution\n",
+    "board_solution = list(board.flatten())\n",
+    "\n",
+    "# represent board solution in genetic form\n",
+    "genetic_solution = ''.join(str(x) for x in list(board.flatten()))\n",
+    "print(genetic_solution)\n",
+    "\n",
+    "# print the board\n",
+    "board"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Genes</th>\n",
+       "      <th>Solution</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[1, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 1, 1, ...</td>\n",
+       "      <td>1010001100001110011111000001111010010100001011...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[1, 1, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 0, ...</td>\n",
+       "      <td>1100001101000101000110000011010100000110000000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[1, 0, 1, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, ...</td>\n",
+       "      <td>1011010111011111101000000000101111101001010111...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 1, ...</td>\n",
+       "      <td>1000010101010010001010111100000001101001100011...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[0, 1, 1, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 1, 0, ...</td>\n",
+       "      <td>0110101001010100100110110000111111010111001111...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>[1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, ...</td>\n",
+       "      <td>1111000010011000100100010000010000111101100111...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>[1, 0, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, ...</td>\n",
+       "      <td>1010111110111100100011111010100010101101000100...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>[1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 0, ...</td>\n",
+       "      <td>1100111110011100000100101110011100001111110110...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>[1, 0, 1, 0, 1, 0, 0, 1, 0, 1, 1, 0, 0, 1, 0, ...</td>\n",
+       "      <td>1010100101100101001110110101111110010101011100...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>[0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 1, 1, 0, 1, ...</td>\n",
+       "      <td>0000111000011011100001110000011100010110100000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>[1, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 1, 0, 1, 0, ...</td>\n",
+       "      <td>1101011011010101111010101000110011001010110011...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>[1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 1, 1, ...</td>\n",
+       "      <td>1000000110100111101010001110011011011000101000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>[1, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 1, 1, ...</td>\n",
+       "      <td>1010001010001110100011111001101010111110001010...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>[1, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 1, 1, 0, 1, ...</td>\n",
+       "      <td>1010011010011011101001011010011001100010100010...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>[1, 1, 0, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, ...</td>\n",
+       "      <td>1100010110011111101011101111001101010110001110...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>[0, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, ...</td>\n",
+       "      <td>0100111110001010100111110111101111110000110010...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>[0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, ...</td>\n",
+       "      <td>0010000011100011011111001001100000000010010010...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>[0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, ...</td>\n",
+       "      <td>0110110001111111010101000011111111010100101000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>[0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 0, 1, 0, 1, 0, ...</td>\n",
+       "      <td>0110001101010101011001110000110110000111111100...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>[1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, ...</td>\n",
+       "      <td>1111101111111000011011000010110111111011001100...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                Genes  \\\n",
+       "0   [1, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 1, 1, ...   \n",
+       "1   [1, 1, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 0, ...   \n",
+       "2   [1, 0, 1, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, ...   \n",
+       "3   [1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 1, ...   \n",
+       "4   [0, 1, 1, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 1, 0, ...   \n",
+       "5   [1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, ...   \n",
+       "6   [1, 0, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, ...   \n",
+       "7   [1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 0, ...   \n",
+       "8   [1, 0, 1, 0, 1, 0, 0, 1, 0, 1, 1, 0, 0, 1, 0, ...   \n",
+       "9   [0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 1, 1, 0, 1, ...   \n",
+       "10  [1, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 1, 0, 1, 0, ...   \n",
+       "11  [1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 1, 1, ...   \n",
+       "12  [1, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 1, 1, ...   \n",
+       "13  [1, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 1, 1, 0, 1, ...   \n",
+       "14  [1, 1, 0, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, ...   \n",
+       "15  [0, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, ...   \n",
+       "16  [0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, ...   \n",
+       "17  [0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, ...   \n",
+       "18  [0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 0, 1, 0, 1, 0, ...   \n",
+       "19  [1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, ...   \n",
+       "\n",
+       "                                             Solution  \n",
+       "0   1010001100001110011111000001111010010100001011...  \n",
+       "1   1100001101000101000110000011010100000110000000...  \n",
+       "2   1011010111011111101000000000101111101001010111...  \n",
+       "3   1000010101010010001010111100000001101001100011...  \n",
+       "4   0110101001010100100110110000111111010111001111...  \n",
+       "5   1111000010011000100100010000010000111101100111...  \n",
+       "6   1010111110111100100011111010100010101101000100...  \n",
+       "7   1100111110011100000100101110011100001111110110...  \n",
+       "8   1010100101100101001110110101111110010101011100...  \n",
+       "9   0000111000011011100001110000011100010110100000...  \n",
+       "10  1101011011010101111010101000110011001010110011...  \n",
+       "11  1000000110100111101010001110011011011000101000...  \n",
+       "12  1010001010001110100011111001101010111110001010...  \n",
+       "13  1010011010011011101001011010011001100010100010...  \n",
+       "14  1100010110011111101011101111001101010110001110...  \n",
+       "15  0100111110001010100111110111101111110000110010...  \n",
+       "16  0010000011100011011111001001100000000010010010...  \n",
+       "17  0110110001111111010101000011111111010100101000...  \n",
+       "18  0110001101010101011001110000110110000111111100...  \n",
+       "19  1111101111111000011011000010110111111011001100...  "
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# genetic algorithm\n",
-    "# represent board in genetic form\n",
+    "# initialize the first generation\n",
+    "n_genes = 100\n",
+    "n_pool_size = 20\n",
+    "gene_pool = {}\n",
     "\n",
-    "# initialize"
+    "gene_pool['Genes'] = list(list(np.random.randint(2, size=n_genes)) for x in range(n_sample))\n",
+    "\n",
+    "gene_solutions = []\n",
+    "for genes in gene_pool['Genes']:\n",
+    "    gene_solutions.append(''.join(str(x) for x in genes))\n",
+    "    \n",
+    "gene_pool['Solution'] = gene_solutions\n",
+    "\n",
+    "# create dataframe\n",
+    "generation = pd.DataFrame(gene_pool)\n",
+    "generation"
    ]
   },
   {
