added fitness function

--- a/Source/Battleship.ipynb
+++ b/Source/Battleship.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,17 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# clear the board\n",
+    "# create a clear board\n",
     "dim = 10\n",
     "board = np.zeros((dim, dim), dtype=int)\n",
     "\n",
     "# randomly place ships on the board\n",
     "ship_lengths = [5, 4, 3, 3, 2]\n",
-    "\n",
     "\n",
     "# for each ship\n",
     "for ship_length in ship_lengths:\n",
@@ -65,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,25 +72,25 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "0011111000000000000000000000000000000000011111110000000001000011110000000000000000000000000000000000\n"
+      "0000000000000000000000000000110000000000001011111001100000000110000000010000000001000001110000000000\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0, 0, 1, 1, 1, 1, 1, 0, 0, 0],\n",
+       "array([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
        "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 1, 1],\n",
        "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [0, 1, 1, 1, 1, 1, 1, 1, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 1, 1, 1, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 1, 0, 1, 1, 1, 1, 1, 0],\n",
+       "       [0, 1, 1, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 1, 1, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0, 0, 0, 1, 1, 1],\n",
        "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,9 +98,6 @@
    "source": [
     "#check number of pieces on the board\n",
     "print(sum(ship_lengths) == sum(sum(board)))\n",
-    "\n",
-    "# board solution\n",
-    "board_solution = list(board.flatten())\n",
     "\n",
     "# represent board solution in genetic form\n",
     "genetic_solution = ''.join(str(x) for x in list(board.flatten()))\n",
@@ -113,7 +109,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fitness(solution, candidate):\n",
+    "    n_gene_matches = 0\n",
+    "    \n",
+    "    for i in range(len(solution)):\n",
+    "        if solution[i] == candidate[i]:\n",
+    "            n_gene_matches += 1\n",
+    "            \n",
+    "    return n_gene_matches / len(solution)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -137,183 +149,234 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Genes</th>\n",
-       "      <th>Solution</th>\n",
+       "      <th>Phenotype</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Birth</th>\n",
+       "      <th>Fitness</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>[1, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 1, 1, ...</td>\n",
-       "      <td>1010001100001110011111000001111010010100001011...</td>\n",
+       "      <td>0111011111001001111100100001110010101100111111...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Random</td>\n",
+       "      <td>0.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>[1, 1, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 0, ...</td>\n",
-       "      <td>1100001101000101000110000011010100000110000000...</td>\n",
+       "      <td>0010110010011110010110100001101101101000011000...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Random</td>\n",
+       "      <td>0.51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>[1, 0, 1, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, ...</td>\n",
-       "      <td>1011010111011111101000000000101111101001010111...</td>\n",
+       "      <td>1000100110000111111000100111111000001010101001...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Random</td>\n",
+       "      <td>0.51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>[1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 1, ...</td>\n",
-       "      <td>1000010101010010001010111100000001101001100011...</td>\n",
+       "      <td>0111010110111110110100010101000010100011100011...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Random</td>\n",
+       "      <td>0.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>[0, 1, 1, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 1, 0, ...</td>\n",
-       "      <td>0110101001010100100110110000111111010111001111...</td>\n",
+       "      <td>1011000011110101111000000101000110001001001110...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Random</td>\n",
+       "      <td>0.52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>[1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, ...</td>\n",
-       "      <td>1111000010011000100100010000010000111101100111...</td>\n",
+       "      <td>0110100110101110010101101100101111011010000011...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Random</td>\n",
+       "      <td>0.48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>[1, 0, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, ...</td>\n",
-       "      <td>1010111110111100100011111010100010101101000100...</td>\n",
+       "      <td>1000000101011110100101111010111110001000111100...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Random</td>\n",
+       "      <td>0.49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>[1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 0, ...</td>\n",
-       "      <td>1100111110011100000100101110011100001111110110...</td>\n",
+       "      <td>0000000000011101101101001000011001010011000011...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Random</td>\n",
+       "      <td>0.53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>[1, 0, 1, 0, 1, 0, 0, 1, 0, 1, 1, 0, 0, 1, 0, ...</td>\n",
-       "      <td>1010100101100101001110110101111110010101011100...</td>\n",
+       "      <td>0001100000111110011001110111001000110010001110...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Random</td>\n",
+       "      <td>0.57</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>[0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 1, 1, 0, 1, ...</td>\n",
-       "      <td>0000111000011011100001110000011100010110100000...</td>\n",
+       "      <td>1000010011010011000011001110111100110100010010...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Random</td>\n",
+       "      <td>0.56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>[1, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 1, 0, 1, 0, ...</td>\n",
-       "      <td>1101011011010101111010101000110011001010110011...</td>\n",
+       "      <td>0010101001111101101001101110110111000001001111...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Random</td>\n",
+       "      <td>0.48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>[1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 1, 1, ...</td>\n",
-       "      <td>1000000110100111101010001110011011011000101000...</td>\n",
+       "      <td>1011111010100010110011011000000010111011010011...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Random</td>\n",
+       "      <td>0.49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>[1, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 1, 1, ...</td>\n",
-       "      <td>1010001010001110100011111001101010111110001010...</td>\n",
+       "      <td>0111110110101010010110010000110011010000111000...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Random</td>\n",
+       "      <td>0.52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>[1, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 1, 1, 0, 1, ...</td>\n",
-       "      <td>1010011010011011101001011010011001100010100010...</td>\n",
+       "      <td>1001001110101110101000001001110101000001001100...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Random</td>\n",
+       "      <td>0.52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>[1, 1, 0, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, ...</td>\n",
-       "      <td>1100010110011111101011101111001101010110001110...</td>\n",
+       "      <td>1100110010111000101001100001100011011101101101...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Random</td>\n",
+       "      <td>0.49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>[0, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, ...</td>\n",
-       "      <td>0100111110001010100111110111101111110000110010...</td>\n",
+       "      <td>1110111011011100011101110110110000111111011000...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Random</td>\n",
+       "      <td>0.47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>[0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, ...</td>\n",
-       "      <td>0010000011100011011111001001100000000010010010...</td>\n",
+       "      <td>0101110100010110100010011001100101110100101001...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Random</td>\n",
+       "      <td>0.51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>[0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, ...</td>\n",
-       "      <td>0110110001111111010101000011111111010100101000...</td>\n",
+       "      <td>1111011100000010000110001111001101001100110101...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Random</td>\n",
+       "      <td>0.42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>[0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 0, 1, 0, 1, 0, ...</td>\n",
-       "      <td>0110001101010101011001110000110110000111111100...</td>\n",
+       "      <td>1010000101110111001010101001100100100110101100...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Random</td>\n",
+       "      <td>0.46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>[1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, ...</td>\n",
-       "      <td>1111101111111000011011000010110111111011001100...</td>\n",
+       "      <td>0101011101011111100111001101111110001100011111...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Random</td>\n",
+       "      <td>0.50</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                Genes  \\\n",
-       "0   [1, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 1, 1, ...   \n",
-       "1   [1, 1, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 0, ...   \n",
-       "2   [1, 0, 1, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, ...   \n",
-       "3   [1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 1, ...   \n",
-       "4   [0, 1, 1, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 1, 0, ...   \n",
-       "5   [1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, ...   \n",
-       "6   [1, 0, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, ...   \n",
-       "7   [1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 0, ...   \n",
-       "8   [1, 0, 1, 0, 1, 0, 0, 1, 0, 1, 1, 0, 0, 1, 0, ...   \n",
-       "9   [0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 1, 1, 0, 1, ...   \n",
-       "10  [1, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 1, 0, 1, 0, ...   \n",
-       "11  [1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 1, 1, ...   \n",
-       "12  [1, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 1, 1, ...   \n",
-       "13  [1, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 1, 1, 0, 1, ...   \n",
-       "14  [1, 1, 0, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, ...   \n",
-       "15  [0, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, ...   \n",
-       "16  [0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, ...   \n",
-       "17  [0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, ...   \n",
-       "18  [0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 0, 1, 0, 1, 0, ...   \n",
-       "19  [1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, ...   \n",
+       "                                            Phenotype Generation   Birth  \\\n",
+       "0   0111011111001001111100100001110010101100111111...          1  Random   \n",
+       "1   0010110010011110010110100001101101101000011000...          1  Random   \n",
+       "2   1000100110000111111000100111111000001010101001...          1  Random   \n",
+       "3   0111010110111110110100010101000010100011100011...          1  Random   \n",
+       "4   1011000011110101111000000101000110001001001110...          1  Random   \n",
+       "5   0110100110101110010101101100101111011010000011...          1  Random   \n",
+       "6   1000000101011110100101111010111110001000111100...          1  Random   \n",
+       "7   0000000000011101101101001000011001010011000011...          1  Random   \n",
+       "8   0001100000111110011001110111001000110010001110...          1  Random   \n",
+       "9   1000010011010011000011001110111100110100010010...          1  Random   \n",
+       "10  0010101001111101101001101110110111000001001111...          1  Random   \n",
+       "11  1011111010100010110011011000000010111011010011...          1  Random   \n",
+       "12  0111110110101010010110010000110011010000111000...          1  Random   \n",
+       "13  1001001110101110101000001001110101000001001100...          1  Random   \n",
+       "14  1100110010111000101001100001100011011101101101...          1  Random   \n",
+       "15  1110111011011100011101110110110000111111011000...          1  Random   \n",
+       "16  0101110100010110100010011001100101110100101001...          1  Random   \n",
+       "17  1111011100000010000110001111001101001100110101...          1  Random   \n",
+       "18  1010000101110111001010101001100100100110101100...          1  Random   \n",
+       "19  0101011101011111100111001101111110001100011111...          1  Random   \n",
        "\n",
-       "                                             Solution  \n",
-       "0   1010001100001110011111000001111010010100001011...  \n",
-       "1   1100001101000101000110000011010100000110000000...  \n",
-       "2   1011010111011111101000000000101111101001010111...  \n",
-       "3   1000010101010010001010111100000001101001100011...  \n",
-       "4   0110101001010100100110110000111111010111001111...  \n",
-       "5   1111000010011000100100010000010000111101100111...  \n",
-       "6   1010111110111100100011111010100010101101000100...  \n",
-       "7   1100111110011100000100101110011100001111110110...  \n",
-       "8   1010100101100101001110110101111110010101011100...  \n",
-       "9   0000111000011011100001110000011100010110100000...  \n",
-       "10  1101011011010101111010101000110011001010110011...  \n",
-       "11  1000000110100111101010001110011011011000101000...  \n",
-       "12  1010001010001110100011111001101010111110001010...  \n",
-       "13  1010011010011011101001011010011001100010100010...  \n",
-       "14  1100010110011111101011101111001101010110001110...  \n",
-       "15  0100111110001010100111110111101111110000110010...  \n",
-       "16  0010000011100011011111001001100000000010010010...  \n",
-       "17  0110110001111111010101000011111111010100101000...  \n",
-       "18  0110001101010101011001110000110110000111111100...  \n",
-       "19  1111101111111000011011000010110111111011001100...  "
+       "    Fitness  \n",
+       "0      0.50  \n",
+       "1      0.51  \n",
+       "2      0.51  \n",
+       "3      0.50  \n",
+       "4      0.52  \n",
+       "5      0.48  \n",
+       "6      0.49  \n",
+       "7      0.53  \n",
+       "8      0.57  \n",
+       "9      0.56  \n",
+       "10     0.48  \n",
+       "11     0.49  \n",
+       "12     0.52  \n",
+       "13     0.52  \n",
+       "14     0.49  \n",
+       "15     0.47  \n",
+       "16     0.51  \n",
+       "17     0.42  \n",
+       "18     0.46  \n",
+       "19     0.50  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# initialize the first generation\n",
+    "# initialize the first random generation\n",
     "n_genes = 100\n",
-    "n_pool_size = 20\n",
-    "gene_pool = {}\n",
+    "n_generation_size = 20\n",
     "\n",
-    "gene_pool['Genes'] = list(list(np.random.randint(2, size=n_genes)) for x in range(n_sample))\n",
+    "# create dataframe for gene pool\n",
+    "gene_pool = pd.DataFrame(columns=['Phenotype','Generation','Birth','Fitness'])\n",
     "\n",
-    "gene_solutions = []\n",
-    "for genes in gene_pool['Genes']:\n",
-    "    gene_solutions.append(''.join(str(x) for x in genes))\n",
+    "# for each phenotype\n",
+    "for i in range(n_generation_size):\n",
+    "\n",
+    "    # create random pheontype\n",
+    "    phenotype = {}\n",
+    "    phenotype['Phenotype'] = ''.join(str(x) for x in list(np.random.randint(2, size=n_genes)))\n",
+    "    phenotype['Birth'] = 'Random'\n",
+    "    phenotype['Generation'] = 1\n",
     "    \n",
-    "gene_pool['Solution'] = gene_solutions\n",
-    "\n",
-    "# create dataframe\n",
-    "generation = pd.DataFrame(gene_pool)\n",
-    "generation"
+    "    # compare fitness\n",
+    "    phenotype['Fitness'] = fitness(genetic_solution, phenotype['Phenotype'])\n",
+    "    \n",
+    "    # check for uniqueness and add to gene pool\n",
+    "    if phenotype['Phenotype'] not in gene_pool['Phenotype']:\n",
+    "        gene_pool = gene_pool.append(phenotype, ignore_index=True)\n",
+    "    \n",
+    "# print the gene pool\n",
+    "gene_pool"
    ]
   },
   {
